# CppCoroutines

./: .gitignore  CMakeLists.txt
StdCoroutines/: CMakeLists.txt  Coroutines.h  main.cpp
StdCoroutines/experiments/: Calculating_Average.cpp  Event_Processor.cpp  Experiments.cpp  Experiments.h  FileReader.cpp  Generic_TaskBased_Coroutine.cpp  PinBall_Game.cpp  State_Machine_Simple.cpp  TaskCoordination.cpp  Waitable_Coroutine_With_Mutex.cpp
StdCoroutines/generators/: Generators.cpp  Generators.h
StdCoroutines/simple_examples/: Awaiter_Lifecycle_Steps.cpp  Awaiter_and_Awaitable.cpp  Coroutine_Lifecycle_CoAwait.cpp  Coroutine_Lifecycle_CoReturn.cpp  Multiple_Awaiters_Resolution.cpp  Multiple_Awaiters_Resolution_2.cpp  Mutiple_Awaiters_Initiail_Final.cpp  Resuming_Coroutine_1.cpp  Returning_Coroutine.cpp  Returning_Coroutine_2.cpp  SimpleCoroutines.h  Waitable_Coroutine.cpp  Waitable_Coroutine_2.cpp  Waitable_Coroutine_Update_Promise_State.cpp  Yield_Coroutine.cpp  Yield_Coroutine_Values_from_List.cpp
StdCoroutines/tests/: Coroutine_Tests.cpp  Coroutine_Tests.h
TinyCoro/: CMakeLists.txt  Common.h  TinyCoro.cpp  TinyCoro.h  main.cpp
Utilities/: CMakeLists.txt
data/: file1.txt  file2.txt
docs/: HELP.txt
